[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/scripts/upstairs-hallway.gd" type="Script" id=1]
[ext_resource path="res://assets/img/upstairs.png" type="Texture" id=2]
[ext_resource path="res://fonts/feast_of_flesh_45.tres" type="DynamicFont" id=3]



[node name="Control" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 640.418, 357.755 )
rotation = -0.00522672
scale = Vector2( 0.999429, 0.851163 )
texture = ExtResource( 2 )

[node name="Downstairs" type="Button" parent="." index="1"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 395.0
margin_top = 675.0
margin_right = 719.0
margin_bottom = 728.0
rect_rotation = -29.3234
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Living Room Door"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Visibility", "custom_colors", "custom_fonts" ]

[node name="ChildRoom" type="Button" parent="." index="2"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 306.0
margin_right = 618.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Stairs"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Visibility", "custom_colors", "custom_fonts" ]

[node name="Office" type="Button" parent="." index="3"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 663.0
margin_top = 290.0
margin_right = 875.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Front Door"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Visibility", "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="Downstairs" to="." method="_on_Downstairs_pressed"]

[connection signal="pressed" from="ChildRoom" to="." method="_on_ChildRoom_pressed"]

[connection signal="pressed" from="Office" to="." method="_on_Office_pressed"]


